updated structure and added doc folder

--- a/examples/cplex_example.ipynb
+++ b/examples/cplex_example.ipynb
@@ -7,6 +7,20 @@
    },
    "source": [
     "# Cplex python API example\n",
+    "\n",
+    "## Installation\n",
+    "The following instructions were adapted from [here](http://www-01.ibm.com/support/knowledgecenter/SSSA5P_12.6.2/ilog.odms.cplex.help/CPLEX/GettingStarted/topics/set_up/Python_setup.html?lang=en)\n",
+    "Go to the directory you installed CPlex in 'YOURCPLEXDIR', on windows this could be `C:\\Program Files (x86)\\IBM\\ILOG\\CPLEX_Studio1261\\cplex`.\n",
+    "Now go to `YOURCPLEXDIR/python/VERSION/PLATFORM` where VERSION is your python version (2.7 or 3.4 most likely) and PLATFORM is your platform (for instance x86_win32 on a 32 bit windows computer). \n",
+    "\n",
+    "Now it is best to install the cplex package in your package directory ('YOURPYTHONPACKAGEDIR') as this is where python searches for packages.\n",
+    "On a windows system with python 2.7 this is probably `C:\\Python27\\Lib\\site-packages`\n",
+    "This is done by running the following command in a terminal:\n",
+    "```\n",
+    "python setup.py install --home YOURPYTHONPACKAGEDIR/cplex\n",
+    "```\n",
+    "\n",
+    "## Use\n",
     "The use of Cplex in python will here be explained by defining, solving and processing the output of an optimal control problem (OCP)."
    ]
   },
@@ -543,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
